kube/schema-registry.yaml
# Is fail
apiVersion: apps/v1
kind: Deployment
metadata:
    name: schema-registry
    namespace: messaging
    labels:
        app: schema-registry
spec:
    replicas: 1
    selector:
        matchLabels:
            app: schema-registry
    template:
        metadata:
            labels:
                app: schema-registry
        spec:
            enableServiceLinks: false
            containers:
                -   name: schema-registry
                    image: confluentinc/cp-schema-registry:7.4.0
                    ports:
                        -   containerPort: 8081
                    resources:
                        requests:
                            memory: "256Mi"
                            cpu: "100m"
                        limits:
                            memory: "512Mi"
                            cpu: "500m"
                    livenessProbe:
                        httpGet:
                            path: /subjects
                            port: 8081
                        initialDelaySeconds: 120
                        periodSeconds: 30
                        timeoutSeconds: 10
                        failureThreshold: 5
                    readinessProbe:
                        httpGet:
                            path: /subjects
                            port: 8081
                        initialDelaySeconds: 90
                        periodSeconds: 10
                        timeoutSeconds: 5
                        failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
    name: schema-registry
    namespace: messaging
    labels:
        app: schema-registry
spec:
    type: NodePort
    ports:
        -   port: 8081          # Internal Port (ClusterIP)
            targetPort: 8081    # Node port
            nodePort: 30081     # external Port (NodePort)
            protocol: TCP
            name: http
    selector:
        app: schema-registry
